<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">Home</string>
    <string name="my_daily_diet">My Daily Diet</string>
    <string name="steps">Steps</string>
    <string name="report">Report</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="map">Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="today_s_calorie_goal_is">Today\'s calorie goal is:</string>
    <string name="kj">KJ</string>
    <string name="set">Set</string>
    <string name="home_diet">Home Diet</string>
</resources>
