<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_daily_diet"
            android:title="@string/my_daily_diet" />
        <item
            android:id="@+id/nav_steps"
            android:title="@string/steps" />
        <item
            android:id="@+id/nav_calorie_tracker"
            android:title="@string/calorie_tracker" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out" />
    </group>
</menu>